zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/union_field_ordered_differently_than_enum.zig
const Tag = enum { a, b };

const Union = union(Tag) {
    b,
    a,
};

const BaseUnion = union(enum) {
    a,
    b,
};

const GeneratedTagUnion = union(@typeInfo(BaseUnion).@"union".tag_type.?) {
    b,
    a,
};

export fn entry() usize {
    return @sizeOf(Union) + @sizeOf(GeneratedTagUnion);
}

// error
//
// :3:15: error: union field order does not match tag enum field order
// :5:5: note: union field 'a' is index 1
// :1:20: note: enum field 'a' is index 0
